# graphics-course-practice

2022/hw1/: CMakeLists.txt  main.cpp
2022/hw1/include/: Circle.cpp  Circle.hpp  Color.cpp  Color.h  Graph.cpp  Graph.hpp  Grid.cpp  (+11 more)
2022/hw2/: CMakeLists.txt  log.txt  main.cpp  shaders.hpp
2022/hw3/: CMakeLists.txt  main.cpp  obj_parser.cpp  obj_parser.h
2022/hw3/rapiragl/: rapiragl.h
2022/hw3/rapiragl/common/: types.h
2022/hw3/rapiragl/components/array_scene_loader/: array_scene_loader.cpp  array_scene_loader.h
2022/hw3/rapiragl/components/file_reader/: file_reader.cpp  file_reader.h
2022/hw3/rapiragl/components/shader/: shader.cpp  shader.h
2022/hw3/rapiragl/components/texture_loader/: texture_loader.cpp  texture_loader.h
2022/hw3/rapiragl/utils/: strong_typedef.h
2022/hw3/shaders/: debug_fragment_shader_source.frag  debug_vertex_shader_source.vert  env_fragment_shader_source.frag  env_vertex_shader_source.vert  fog_fragment_shader_source.frag  fog_vertex_shader_source.vert  main_fragment_shader_source.frag  main_vertex_shader_source.vert  shadow_fragment_shader_source.frag  shadow_vertex_shader_source.vert  snowflake_fragment_shader_source.frag  snowflake_geometry_shader_source.geom  snowflake_vertex_shader_source.vert  sphere_fragment_shader_source.frag  sphere_vertex_shader_source.vert
2022/hw3/tinyobj/: tiny_obj_loader.hpp
2022/hw3/utils/: utils.cpp  utils.h
2022/practice1/: main.cpp
2022/practice10/: main.cpp  obj_parser.cpp  obj_parser.hpp
2022/practice11/: main.cpp
2022/practice12/: main.cpp
2022/practice13/: main.cpp
2022/practice14/: main.cpp
2022/practice15/: main.cpp
2022/practice2/: main.cpp
2022/practice3/: main.cpp
2022/practice4/: main.cpp  obj_parser.cpp
2022/practice5/: main.cpp
2022/practice6/: CMakeLists.txt  main.cpp  matrix_test.cpp
2022/practice8/: main.cpp
2022/practice9/: main.cpp
(+1 files in other folders)
